# vision-idl

./: Makefile.am  README.md  bootstrap.sh  configure.ac  vision-idl.pc.in
sensor/: calibration.idl  camera.gen  depth.idl  image.idl  pixel.idl
