dnl
dnl vision-idl autoconf file
dnl

AC_PREREQ(2.62)
AC_INIT([vision-idl],[1.0],[martin.jacquet@laas.fr])

AC_CONFIG_AUX_DIR([autoconf])
AC_CONFIG_MACRO_DIR([autoconf])
AM_INIT_AUTOMAKE([foreign no-define])

# programs
AC_PROG_INSTALL

# output
AC_CONFIG_FILES([
        Makefile
        vision-idl.pc
])
AC_OUTPUT
